<?xml version="1.0" encoding="utf-8"?><!--
     Copyright (C) 2013 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources>

    <string name="app_name">BLE MESH Controller</string>
    <string name="name">admin</string>

    <string name="popup_title">Quit BLE MESH Controller?</string>
    <string name="popup_title_back">Do you want to go back to Login Page?</string>
    <string name="popup_message_back">You will be logged out.</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="title_activity_login">BLE MESH Controller</string>

    <!--new string-->
    <string name="connect_with_device">Connect to the network</string>
    <string name="save_account">Save Account</string>
    <string name="nameOfDoor">Door to the laboratory</string>
    <string name="nameOfDoor1">Door to the storage room</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="checkTheState">Door status:</string>
    <string name="default_state">-</string>


    <!-- Strings related to login -->
    <string name="prompt_email">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is too short</string>
    <string name="error_door_required">Door selection is required</string>
    <string name="account_was_created">Account was created</string>

    <string name="title_activity_create_account">CreateAccount</string>
    <string name="title_activity_admin">Admin Panel</string>
    <string name="title_home">Home</string>
    <string name="action_settings">Settings</string>

    <string name="enterPersonalData">Enter personal data:</string>
    <string name="setUpAccessibility">Set up accessibility:</string>
    <string name="title_activity_user">User Panel</string>
    <string name="show_users">Show users</string>
    <string name="disconnecting_message">Connection fails. Try again…</string>

</resources>

